# fin

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  fin.spec  install.sh  opencode.json  pyproject.toml
.opencode/agents/: finance.md
migrations/: env.py
migrations/versions/: 0703644c005a_add_loans.py  794ff7806994_initial.py  f90682972073_add_networth.py
src/fin/: __main__.py  db.py  helpers.py  main.py  mcp_server.py  models.py  seed.py
src/fin/services/: amortization.py  onboarding.py
